images appear now, removed unnecessary slashes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="twelve columns hero" style="margin-top: 0%">
 
-        <div id="profile-circle" class="five columns offset-by-one"><img id="headshot" src="/profile/squareprofile5.png" alt="Imran's Profile Picture"></div>
+        <div id="profile-circle" class="five columns offset-by-one"><img id="headshot" src="profile/squareprofile5.png" alt="Imran's Profile Picture"></div>
         <div id="profile-text" class="five columns offset-by-one">
 
           <h1>Hi, this is Imran</h1>
@@ -50,10 +50,10 @@
           
 
           <div class="socials-block">
-            <a href="http://linkedin.com/in/thisisimran/" target="_blank" class="social-icon"><img src="/icons/linkedin.png" alt="LinkedIn logo"></a>
-            <a href="https://github.com/cheezfish" target="_blank" class="social-icon"><img src="/icons/github.png" alt="github logo"></a>
-            <a href="http://instagram.com/yankeedoodlegandhi" target="_blank" class="social-icon"><img src="/icons/instagram.png" alt="instagram logo"></a>
-            <a href="http://soundcloud.com/cheezfish" target="_blank" class="social-icon"><img src="/icons/soundcloud.png" alt="soundcloud logo"></a>
+            <a href="http://linkedin.com/in/thisisimran/" target="_blank" class="social-icon"><img src="icons/linkedin.png" alt="LinkedIn logo"></a>
+            <a href="https://github.com/cheezfish" target="_blank" class="social-icon"><img src="icons/github.png" alt="github logo"></a>
+            <a href="http://instagram.com/yankeedoodlegandhi" target="_blank" class="social-icon"><img src="icons/instagram.png" alt="instagram logo"></a>
+            <a href="http://soundcloud.com/cheezfish" target="_blank" class="social-icon"><img src="icons/soundcloud.png" alt="soundcloud logo"></a>
           </div>
         </div>
       </div>
