--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <h1>Hi, this is Imran</h1>
           <hr>
-          <h4>I'm a <a href='https://www.f6s.com/elipptic'>Roboticist</a>, <a href='http://remelife.io/about-us'>Interaction Designer</a>, and <a href='https://www.fiverr.com/imranazizii?up_rollout=true'>Copywriter</a>.</h4>
+          <h4>I'm a <a class="underlined underlined--thick" href='https://www.f6s.com/elipptic'>Roboticist</a>, <a class="underlined underlined--thick" href='http://remelife.io/about-us'>Interaction Designer</a>, and <a class="underlined underlined--thick" href='https://www.fiverr.com/imranazizii?up_rollout=true'>Copywriter</a>.</h4>
           
 
           <div class="socials-block">
