--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 
 
   <!-- CSS
@@ -26,8 +30,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 
-
-  <!-- Favicon
+  <!-- Favicon 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -44,7 +47,7 @@
         <div id="profile-circle" class="five columns offset-by-one"><img id="headshot" src="profile/squareprofile5.png" alt="Imran's Profile Picture"></div>
         <div id="profile-text" class="five columns offset-by-one">
 
-          <h1>Hi, this is Imran</h1>
+          <h1 id="hello">Hi, this is Imran</h1>
           <hr>
           <h4>I'm a <a class="underlined underlined--thick" href='https://www.f6s.com/elipptic'>Roboticist</a>, <a class="underlined underlined--thick" href='http://remelife.io/about-us'>Interaction Designer</a>, and <a class="underlined underlined--thick" href='https://www.fiverr.com/imranazizii?up_rollout=true'>Copywriter</a>.</h4>
           
