--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
   <!-- Favicon 
@@ -52,14 +53,14 @@
           <div id="profile-text">
             <h1 id="hello">Hi, this is Imran</h1>
             <hr>
-            <h4>I'm a <a class="underlined underlined--thick" href='https://www.f6s.com/elipptic'>Roboticist</a>, <a class="underlined underlined--thick" href='http://remelife.io/about-us'>Interaction Designer</a>, <br>and <a class="underlined underlined--thick" href='https://www.fiverr.com/imranazizii?up_rollout=true'>Copywriter</a>.</h4>
+            <h4>I'm a <a class="underlined underlined--thick" href='https://www.f6s.com/elipptic'>Roboticist</a>, <br> <a class="underlined underlined--thick" href='http://remelife.io/about-us'>Interaction Designer</a>, <br>and <a class="underlined underlined--thick" href='https://www.fiverr.com/imranazizii?up_rollout=true'>Copywriter</a>.</h4>
           </div>
 
           <div class="socials-block">
-            <a href="http://linkedin.com/in/thisisimran/" target="_blank" class="social-icon"><img src="icons/linkedin.png" alt="LinkedIn logo"></a>
-            <a href="https://github.com/cheezfish" target="_blank" class="social-icon"><img src="icons/github.png" alt="github logo"></a>
-            <a href="http://instagram.com/yankeedoodlegandhi" target="_blank" class="social-icon"><img src="icons/instagram.png" alt="instagram logo"></a>
-            <a href="http://soundcloud.com/cheezfish" target="_blank" class="social-icon"><img src="icons/soundcloud.png" alt="soundcloud logo"></a>
+            <a href="http://linkedin.com/in/thisisimran/" target="_blank" class="social-icon hvr-grow"><img src="icons/linkedin.png" alt="LinkedIn logo"></a>
+            <a href="https://github.com/cheezfish" target="_blank" class="social-icon hvr-grow"><img src="icons/github.png" alt="github logo"></a>
+            <a href="http://instagram.com/yankeedoodlegandhi" target="_blank" class="social-icon hvr-grow"><img src="icons/instagram.png" alt="instagram logo"></a>
+            <a href="http://soundcloud.com/cheezfish" target="_blank" class="social-icon hvr-grow"><img src="icons/soundcloud.png" alt="soundcloud logo"></a>
           </div>
         </div>
 
@@ -75,8 +76,8 @@
           <h3>About Me</h3>
           <p>Graduate of Robotics Engineering, specialising in UX and Human-Computer Interaction.
             <br> Goal oriented, data driven usability geek. <br> Proficient in a range of softwares/languages.</p>
-            <a class="button ten columns offset-by-one" id="downloadCV" href="https://drive.google.com/file/d/1fqZxxAjk8aXe5IBcJbSRwRZuGG4hV8ef/view?usp=sharing"> Download CV</a>
-            <button class="button-primary ten columns offset-by-one column" id="contact"> Contact Me</button>
+            <a class="button ten columns offset-by-one hvr-curl-top-right" id="downloadCV" href="https://drive.google.com/file/d/1fqZxxAjk8aXe5IBcJbSRwRZuGG4hV8ef/view?usp=sharing"> Download CV</a>
+            <button class="button-primary ten columns offset-by-one column hvr-grow" id="contact"> Contact Me</button>
         </div>
       </div>
     </div>
