added granim, fixed wonkiness,

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <div class="row">
       <div class="twelve columns hero" style="margin-top: 0%">
         <div id="circle-container">
-          <div id="profile-circle" class="u-float-left">
+          <canvas id="canvas-image-blending" class="u-float-left profile-circle">
             <img id="headshot" src="profile/squareprofile5.png" alt="Imran's Profile Picture">
-          </div>
+          </canvas>
         </div>
         
         <div id="profile-right" class="u-float-right">
@@ -205,6 +205,7 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="granim.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
