minor SEO changes to meta tags
amended name and desc

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>this is IMRAN</title>
-  <meta name="description" content="Imran's online portfolio of work">
+  <title> imran azizuddin - portfolio of work | cheezfish</title>
+  <meta name="description" content="Imran Azizuddin - online portfolio of work in Robotics, Copywriting, Screenwriting, Interaction Design etc. Also known as: Imran Aziz , cheezfish , imranazizii">
   <meta name="author" content="Imran Azizuddin">
 
   <!-- Mobile Specific Metas
