Added OpenGraph stuff for better socials

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title> imran azizuddin - portfolio of work | cheezfish</title>
   <meta name="description" content="Imran Azizuddin - online portfolio of work in Robotics, Copywriting, Screenwriting, Interaction Design etc. Also known as: Imran Aziz , cheezfish , imranazizii">
   <meta name="author" content="Imran Azizuddin">
+  <meta property="og:title" content="imran azizuddin - portfolio of work | cheezfish" />
+  <meta property="og:image" content="http://cheezfish.com/profile/squareprofile5.png" />
+  <meta property="og:url" content="http://cheezfish.com/" />
+  <meta property="og:description" content="Imran Azizuddin - online portfolio of work in Robotics, Copywriting, Screenwriting, Interaction Design etc. Also known as: Imran Aziz , cheezfish , imranazizii" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
