Added canonical rel, no more www
C'mon google INDEX ME BABY

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:image" content="http://cheezfish.com/profile/squareprofile5.png" />
   <meta property="og:url" content="http://cheezfish.com/" />
   <meta property="og:description" content="Imran Azizuddin - online portfolio of work in Robotics, Copywriting, Screenwriting, Interaction Design etc. Also known as: Imran Aziz , cheezfish , imranazizii" />
+  <link rel="canonical" href="https://cheezfish.com/" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
